# ratlab-mod-github

./: .gitignore  README.md  build_mod.bat
PlayerStoryteller/About/: About.xml
PlayerStoryteller/Source/: PlayerStoryteller.csproj  ScreenshotManager.cs
Playerstoryteller MAIN/: .gitignore  DISCOVER.md  NEW DESC.txt  PLAN_LIVE_OPTICAL_VIEW.txt  README.md  STEAM_DESCRIPTION.txt  api changes.txt  build-current.bat  build-legacy.bat  build.bat  fun.py  integrations.txt  problem.txt  start.bat
Playerstoryteller MAIN/PlayerStoryteller/: SETUP.md
Playerstoryteller MAIN/PlayerStoryteller/About/: About.xml
Playerstoryteller MAIN/PlayerStoryteller/Defs/: GameComponentDef.xml  MapComponentDef.xml
Playerstoryteller MAIN/PlayerStoryteller/Source/: MapComponentInjector.cs  NetworkSpeedTest.cs  PlayerStoryteller.csproj  PlayerStorytellerMod.cs  (+3 more)
Playerstoryteller MAIN/RIMAPI SOURCE/: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml
Playerstoryteller MAIN/Ratlab Mod/: API.md  ARCHITECTURE.md  DEVELOPER.md  SETUP.md
Playerstoryteller MAIN/Ratlab Server/: Dockerfile  package-lock.json  package.json  server.js
Playerstoryteller MAIN/go-sidecar/: build-test.bat  capture.go  encoder.go  go.mod  go.sum  gpu.go  main-capture.go.bak  main.go  monitoring.go  test-capture.go.bak  types.go  webrtc.go  websocket.go
Playerstoryteller MAIN/rust-sidecar/: Cargo.toml  README.md
Playerstoryteller MAIN/rust-sidecar/src/: encoder_patched.rs  main.rs  monitor.rs  mp4.rs  stream.rs  websocket.rs
Playerstoryteller MAIN/server/: package.json  server.js
server/: server.js
server/public/: app.js  styles.css
(+201 files in other folders)
