[package]
name = "ratlab-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
url = "2.5"
native-tls = "0.2"
tokio-native-tls = "0.3"
byteorder = "1.5"
simplelog = "0.12"
parking_lot = "0.12"
thiserror = "1.0"
windows-core = "0.62"
windows-implement = "0.60.2" # Using 0.58 or matching windows version? windows-implement usually tracks windows version.

# The Capture Library
windows-capture = "2.0.0-alpha.7"

# Raw Windows API
[dependencies.windows]
version = "0.62"
features = [
    "Win32_Media_MediaFoundation",
    "Win32_Graphics_Direct3D11",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_Graphics_Dxgi",
    "Win32_Foundation",
    "Win32_System_WinRT",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_WinRT_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_WinRT_Graphics",
    "Win32_System_WinRT_Graphics_Capture",
    # WinRT Features
    "Foundation",
    "Graphics",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Graphics_Imaging",
    "Media",
    "Media_Core",
    "Media_MediaProperties",
    "Media_Transcoding",
    "Security",
    "Security_Cryptography",
    "Storage",
    "Storage_Streams",
]
